# toy-collision-avoidance

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/: README.md
data/: sample_tles.txt
examples/: demo_refined_top10.csv  run_demo.sh  run_example.sh
src/ca_proto/: __init__.py  cli.py  config.py  dashboard.py  dv_planner.py  geometry.py  plots.py  propagate.py  refine.py  reporting.py  screening.py  timeutil.py  tle_io.py
tests/: test_cli.py  test_dv_limits_local.py  test_dv_planner.py  test_geometry.py  test_propagate.py  test_refine.py  test_reporting.py  test_screening.py  test_tle_io.py
