[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# pyproject.toml
[project]
name = "ca-proto"
version = "0.1.0"

description = "Toy collision avoidance prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
# name = "ca-proto"
# version = "0.1.0"
# ... your existing fields ...
dependencies = [
  "numpy",
  "pandas",
  "sgp4",
  "requests",
  "plotly",
  "kaleido",
  "dash",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "numpy",
  "pandas",
  "sgp4",
  "requests",
  "plotly",   # core plotting
  "kaleido",  # PNG export for Plotly
  "dash",     # dashboard
]

