[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ca-proto"
version = "0.1.0"
description = "Toy collision-avoidance prototype: TLE/SGP4 screening, refinement, reporting, dashboard"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# authors = [{ name = "Your Name", email = "you@example.com" }]  # optional

# Base runtime dependencies (what a normal user needs)
dependencies = [
  "numpy",
  "pandas",
  "sgp4",
  "requests",
  "plotly",
  "kaleido",
  "dash",
]

[project.optional-dependencies]
# Dev extras (what CI uses with `.[dev]`)
dev = [
  "pytest",
  "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

